<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/welcome_ill"
            android:src="@drawable/ic_welcome_boy"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            tools:layout_editor_absoluteX="0dp">

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:theme="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpFirstNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Last Name"
                android:theme="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpLastNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:theme="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEmailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Phone Number"
                android:theme="@style/TextInputLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPhoneNumberET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/confirmPassword"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpConfirmPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpBtn"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="350dp"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/cntn"
                app:backgroundTint="#00bbff" />

            <TextView
                android:id="@+id/alreadyAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToLogin"
                android:layout_marginBottom="16dp"
                android:text="@string/already_have_an_account_login"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>